Jan 21- Code for demo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ site.url=https://www.emirates.com
 browser.name=chrome
 browser.version=${browser.version}
 browser.platform=${browser.platform}
+chrome.manage = trips
+firefox.manage = trips2
